test/should-fail/检查类型-8.j
function a takes nothing returns nothing
    local handle h = null
    if not h then
    endif
endfunction
